Added an option to exclude uploads from the slow-request statistics.